# FreeRTOS-Emulator

./: .clang-format  .gitignore  README.txt
FreeRTOS/Demo/Posix_GCC/: CMakeLists.txt  Makefile  main_blinky.c
FreeRTOS/Demo/Posix_GCC/calculations/: mileage_calc.c  mileage_calc.h
FreeRTOS/Demo/Posix_GCC/data/: can_data.c  can_data.h  data_receive.c  fuel_calc.c  fuel_calc.h  globals_calc.c  globals_calc.h  mileage_calc.c  mileage_calc.h  mileage_calculator.c  mileage_calculator.h
FreeRTOS/Demo/motor_os/: .clang-format  CMakeLists.txt  Makefile  main.c  main_blinky.c
FreeRTOS/Demo/motor_os/drivers/: bsp_data.c  bsp_data.h
FreeRTOS/Demo/motor_os/hal/: bak.xx  can_manager.c  can_manager.h
FreeRTOS/Demo/motor_os/middleware/: app_callbacks.c  app_callbacks.h  can_ids.h  indicator.c  indicator.h
FreeRTOS/Demo/motor_os/middleware/parser/: frame_parser.c  frame_parser.h  frame_sender.c  frame_sender.h  protocol_frame.c  protocol_frame.h
FreeRTOS/Demo/motor_os/middleware/rpm/: vehicle_rpm.c  vehicle_rpm.h
FreeRTOS/Demo/motor_os/middleware/speed/: vehicle_speed.c  vehicle_speed.h
FreeRTOS/Demo/motor_os/middleware/tool/: tool.c  tool.h
